2011-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_find_file): Fix handling of names
	occupying the whole field size.

2011-12-23  Lukas Anzinger <l.anzinger@gmail.com>

	* util/grub-mkconfig_lib.in (version_test_gt): Fix variable names.

2011-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_cmd_delroute): Add missing out condition.

2011-12-23  Seth Goldberg <seth.goldberg@oracle.com>

	* grub-core/Makefile.core.def (lzma_decompress): Add missing
	TARGET_IMG_LDFLAGS.

2011-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (ESCAPED_PATH_MAX): New define.
	(mountinfo_entry): Increase the field size to take escaping into
	account.
	(find_root_device_from_libzfs): Add one byte to size of strings for
	security.

2011-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (grub_reed_solomon_add_redundancy): Add
	an assert.
	* util/grub-setup.c (setup): Likewise.

2011-12-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Add missing argument for
	_LzmaDecodeA.

2011-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation): New section.

2011-12-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Loopback booting): New section.

2011-12-22  Keshav P R  <the.ridikulus.rat@gmail.com>

	* util/grub-mkstandalone.in: Fix minor typo errors.

2011-12-20  Vladimir Serbinenko  <phcoder@gmail.com>

	IPv6, TCP, HTTP, ICMP and DNS support. Several cleanups and bugfixes.

	* grub-core/Makefile.core.def (net): Add net/dns.c, net/tcp.c,
	net/icmp.c and net/icmp6.c.
	(http): New module.
	(priority_queue): Likewise.
	* grub-core/io/bufio.c: Rewritten.
	* grub-core/lib/legacy_parse.c (legacy_command): New argument type
	TYPE_WITH_CONFIGFILE_OPTION.
	(legacy_commands): Add bootp and dhcp.
	(is_option): Handle TYPE_WITH_CONFIGFILE_OPTION.
	(grub_legacy_parse): Likewise.